projects/vb6parse/snapshots/tests/library/string/lenb/lenb_with_variable.snap
---
source: projects/vb6parse/tests/library/string/lenb.rs
expression: tree
---
root:
  kind: Root
  children:
    - kind: Newline
      text: "\n"
    - kind: SubStatement
      children:
        - kind: SubKeyword
          text: Sub
        - kind: Whitespace
          text: " "
        - kind: Identifier
          text: Test
        - kind: ParameterList
          children:
            - kind: LeftParenthesis
              text: (
            - kind: RightParenthesis
              text: )
        - kind: Newline
          text: "\n"
        - kind: StatementList
          children:
            - kind: Whitespace
              text: "    "
            - kind: DimStatement
              children:
                - kind: DimKeyword
                  text: Dim
                - kind: Whitespace
                  text: " "
                - kind: Identifier
                  text: text
                - kind: Whitespace
                  text: " "
                - kind: AsKeyword
                  text: As
                - kind: Whitespace
                  text: " "
                - kind: StringKeyword
                  text: String
                - kind: Newline
                  text: "\n"
            - kind: Whitespace
              text: "    "
            - kind: DimStatement
              children:
                - kind: DimKeyword
                  text: Dim
                - kind: Whitespace
                  text: " "
                - kind: Identifier
                  text: size
                - kind: Whitespace
                  text: " "
                - kind: AsKeyword
                  text: As
                - kind: Whitespace
                  text: " "
                - kind: LongKeyword
                  text: Long
                - kind: Newline
                  text: "\n"
            - kind: Whitespace
              text: "    "
            - kind: AssignmentStatement
              children:
                - kind: IdentifierExpression
                  children:
                    - kind: Identifier
                      text: size
                - kind: Whitespace
                  text: " "
                - kind: EqualityOperator
                  text: "="
                - kind: Whitespace
                  text: " "
                - kind: CallExpression
                  children:
                    - kind: Identifier
                      text: LenB
                    - kind: LeftParenthesis
                      text: (
                    - kind: ArgumentList
                      children:
                        - kind: Argument
                          children:
                            - kind: IdentifierExpression
                              children:
                                - kind: TextKeyword
                                  text: text
                    - kind: RightParenthesis
                      text: )
                - kind: Newline
                  text: "\n"
        - kind: EndKeyword
          text: End
        - kind: Whitespace
          text: " "
        - kind: SubKeyword
          text: Sub
        - kind: Newline
          text: "\n"
